--- a/DeadSpaceCheatDLL/DeadSpaceCheatDLL.vcxproj.filters
+++ b/DeadSpaceCheatDLL/DeadSpaceCheatDLL.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="assembly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="controls.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
